--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
  </head>
  <body>
-    <section class="main-wrapper">
+    <div class="main-wrapper">
         <header>
             <img id="logo" src="./logo.png" alt="Logo">
             <div class="container">
@@ -59,13 +59,13 @@
                 <td>Node.js</td>
                 <td>9.99</td>
                 <td>9.99</td>
-                <td>-<input type= "number" value="1"/>+</td>
+                <td>-<input type= "number" value="1">+</td>
             </tr>
             <tr>
                 <td>Angular</td>
                 <td>29.99</td>
                 <td>290.99</td>
-                <td>- <input type= "number" value="10"/>+</td>
+                <td>- <input type= "number" value="10">+</td>
             </tr>
             <tfoot>
                 <tr>
@@ -88,7 +88,7 @@
         </a>
 
         <button id ="placeorder">Place Order</button>
-    </section>
+    </div>
    
  </body>
  </html>
