--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
             
         </table>
 
-        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fluwamwel.github.io%2FWap-lab2%2F" target= "_blank">
+        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fluwamwel.github.io%2Fwap-lab3%2F" target= "_blank">
             <img id="htmlchecker-image" src="./htmlchecker.png" alt="htmlchecker image">
         </a>
 
-        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fluwamwel.github.io%2FWap-lab2%2F&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en" target= "_blank">
+        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fluwamwel.github.io%2Fwap-lab3%2F&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en" target= "_blank">
             <img id="csschecker-image" src="./csschecker.png" alt="csschecker image">
         </a>
 
